kube/04.memcached_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-memcached-deployment
  namespace: myapp-namespace
  labels:
    app: myapp
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: myapp
      tier: cache
  template:
    metadata:
      labels:
        app: myapp
        tier: cache
    spec:
      containers:
      - name: memcached
        image: bitnami/memcached:latest
        ports:
          - containerPort: 11211
            name: myapp-memcport
            protocol: TCP
