kube/04.redis_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-redis-deployment
  namespace: myapp-namespace
  labels:
    app: myapp
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: myapp
      tier: persistentcache
  template:
    metadata:
      name: redis
      labels:
        app: myapp
        tier: persistentcache
    spec:
      volumes:
      - name: myapp-redis
        persistentVolumeClaim:
          claimName: myapp-redis-pvc
      containers:
      - name: redis
        image: "bitnami/redis:6.0.16"
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: "/bitnami/redis/data"
          name: myapp-redis
