kube/05.memcached_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: myapp-namespace
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
    - name: memcached
      port: 11211
      protocol: TCP
      targetPort: 11211
  selector:
    app: myapp
    tier: cache
