kube/05.redis_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: myapp-namespace
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: myapp
    tier: persistentcache
