kube/07.ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-lb
  namespace: myapp-namespace
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: myapp-tutorial
  type: LoadBalancer
