kube/07.ingress-onprem.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myapp-namespace
  labels:
    app: myapp-tutorial
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: myapp-tutorial
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.c4xp.ro
    http:
      paths:
      - backend:
          serviceName: myapp-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - myapp.c4xp.ro
    secretName: myapp-cert-selfsign
